# umni-c1-firmware

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  config.h.in  partitions.csv  sdkconfig.old
components/1wire/: 1wire.c  1wire.h  CMakeLists.txt  Kconfig.projbuild
components/adc/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h
components/automation/: CMakeLists.txt  automation.c  automation.h  um_automation.c  um_automation.h
components/config/: CMakeLists.txt  config.c  config.h  tz.h
components/dio/: CMakeLists.txt  Kconfig.projbuild  dio.c  dio.h
components/ethernet/: CMakeLists.txt  Kconfig.projbuild  ethernet.c  ethernet.h
components/events/: event_types.h
components/mdns_service/: CMakeLists.txt  mdns_service.c  mdns_service.h
components/mosquitto/: CMakeLists.txt  mosquitto.c  mosquitto.h
components/nvs/: CMakeLists.txt  Kconfig.projbuild  nvs.c  nvs.h  nvs_defines.h
components/opentherm/: CMakeLists.txt  opentherm.c  opentherm.h  opentherm_operations.c  opentherm_operations.h
components/ota/: CMakeLists.txt  Kconfig.projbuild  ota.c  ota.h
components/rf433/: CMakeLists.txt  Kconfig.projbuild  esp32_rf_receiver.c  esp32_rf_receiver.h  rf433.c  rf433.h
components/systeminfo/: CMakeLists.txt  systeminfo.c  systeminfo.h
components/webserver/: CMakeLists.txt  Kconfig.projbuild  rest_server.c  webserver.c  webserver.h
main/: Kconfig.projbuild  idf_component.yml  main.c
main/includes/: device_types.h  events.h
